Upiękrzenia: linki, aktualności, menu
+ pokolorowane linki (niebieski, zielony)

+ wklęsłe ramki wokół artykułów i menu

+ wskaźnik aktualnej strony w menu

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
     <div class="grid">
       <div  id="content" class="unit four-fifths">
-	<div>
+	<div id="news">
 	  <h2>Aktualności</h2>
 	  <section>
 	    <h4>Informacja</h4>
@@ -53,7 +53,7 @@
 	    turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam
 	    erat ac ipsum.
 	    </p>
-	    <p class="read-more">Więcej</p>
+	    <a href="#" class="read-more">Więcej&hellip;</a>
 	  </section>
 	  <section>
 	    <h4>Informacja</h4>
@@ -68,7 +68,7 @@
 	    turpis velit, rhoncus eu, luctus et interdum adipiscing wisi. Aliquam
 	    erat ac ipsum.
 	    </p>
-	    <p class="read-more">Więcej</p>
+	    <a href="#" class="read-more">Więcej&hellip;</a>
 	  </section>
 	</div>
 
@@ -115,18 +115,18 @@ Numer przedszkola? Dwa - cztery - jeden!
 	<div id="menu">
 	<h4>Menu</h4>
 	<ul>
-	  <li>Aktualności</li>
-	  <li>O nas</li>
-	  <li>Oferta edukacyjna</li>
-	  <li>Zajęcia dodatkowe</li>
-	  <li>Tradycje</li>
-	  <li>Rekrutacja</li>
-	  <li>Kontakt</li>
-	  <li>Ogłoszenia</li>
-	  <li>Galeria zdjęć</li>
-	  <Li>Rada Rodziców</Li>
-	  <li>1%</li>
-	  <LI>BIP</LI>
+	  <li class="current"><a href="#">Aktualności</a></li>
+	  <li><a href="#">O nas</a></li>
+	  <li><a href="#">Oferta edukacyjna</a></li>
+	  <li><a href="#">Zajęcia dodatkowe</a></li>
+	  <li><a href="#">Tradycje</a></li>
+	  <li><a href="#">Rekrutacja</a></li>
+	  <li><a href="#">Kontakt</a></li>
+	  <li><a href="#">Ogłoszenia</a></li>
+	  <li><a href="#">Galeria zdjęć</a></li>
+	  <li><a href="#">Rada Rodziców</a></li>
+	  <li><a href="#">1%</a></li>
+	  <li class=""><a href="#">BIP</a></li>
 	</ul>
 	</div>
       </aside>
