Stopka, obrazek z klockami

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	    <li>Tropiciele</li>
 	  </ul>
 	</nav>
+      </div>
     </header>
     <div class="grid">
       <div  id="content" class="unit four-fifths">
@@ -73,7 +74,7 @@
 	</div>
 
 	<div  id="wiersz-komputer" style="display: none;">
-	  <img src="obrazy/naucz5.gif">
+	  <img src="obrazy/naucz5.gif" alt="nauczycielka i dzieci">
 	  <h4>NASZE PRZEDSZKOLE</h4>
 	  <pre>
 W naszym przedszkolu jest kolorowo,
@@ -132,7 +133,23 @@ Numer przedszkola? Dwa - cztery - jeden!
       </aside>
     </div>
     <footer>
-      <div class="grid"></div>
+      <div class="grid">
+	<div class="unit four-fifths grid">
+	  <div class="unit one-third" >
+	    Przedszkole nr 241<br>
+	    ul. Księcia Trojdena 5B<br>
+	    02-109 Warszawa<br>
+	    tel. +48-22-823-41-19
+	  </div>
+	  <div class="unit one-third">
+	  </div>
+	  <div class="unit one-third">
+	  </div>
+	</div>
+	<div class="unit one-fifth">
+	  <img src="obrazy/klocki.png" alt="klocki" style="position: relative; top: -100px;">
+	</div>
+      </div>
     </footer>
   </body>
 </html>
