--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
 <!DOCTYPE HTML>
 <html>
+<!--
+TODO: sitemap https://support.google.com/webmasters/answer/156184
+-->
   <head>
     <title>Trojdenek - Przedszkole nr 241</title>
     <link rel="stylesheet" type="text/css" href="css/normalize.css" >
     <link rel="stylesheet" type="text/css" href="css/gridism.css" >
     <link rel="stylesheet" type="text/css" href="css/main.css" >
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <meta name="viewport" content="width=device-width,initial-scale=1">
   </head>
   <body class="wrap">
     <header>
@@ -29,18 +33,20 @@
 	</div>
 	<nav class="unit two-thirds" id="grupy">
 	  <ul>
-	    <li>Krasnale</li>
-	    <li>Misie</li>
-	    <li>Słoneczka</li>
-	    <li>Tropiciele</li>
+	    <li><img class="pixelart" src="obrazy/krasnal.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
+	    <li><img class="pixelart" src="obrazy/mis.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
+	    <!-- <li style="width: 128px; height:128px;">Tropiciele</li> -->
+	    <li><img class="pixelart" src="obrazy/krasnal.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
+	    <li><img class="pixelart" src="obrazy/sloneczko.png" alt="słoneczka"></li>
+
 	  </ul>
 	</nav>
       </div>
     </header>
-    <div class="grid">
+    <div id="foobar" class="grid">
       <div  id="content" class="unit four-fifths">
 	<div id="news">
-	  <h2>Aktualności</h2>
+	  <h1 style="padding-top: 0;">Aktualności</h2>
 	  <section>
 	    <h4>Informacja</h4>
 	    <p>Opublikowano: 2014-09-24 00:25</p>
@@ -105,7 +111,7 @@ Numer przedszkola? Dwa - cztery - jeden!
 	</div>
       </div>
 
-      <aside class="unit one-fifth hide-on-mobiles">
+      <aside style="padding-top: 0px;" class="unit one-fifth hide-on-mobiles">
 	<form action="http://www.duckduckgo.com/" method="get">
 	  <fieldset role="search" class="grid">
 	    <input type="hidden" name="sites" value="trojdenek.waw.pl" >
@@ -117,7 +123,7 @@ Numer przedszkola? Dwa - cztery - jeden!
 	<h4>Menu</h4>
 	<ul>
 	  <li class="current"><a href="#">Aktualności</a></li>
-	  <li><a href="#">O nas</a></li>
+	  <li><a href="/o-nas.html">O nas</a></li>
 	  <li><a href="#">Oferta edukacyjna</a></li>
 	  <li><a href="#">Zajęcia dodatkowe</a></li>
 	  <li><a href="#">Tradycje</a></li>
@@ -128,6 +134,7 @@ Numer przedszkola? Dwa - cztery - jeden!
 	  <li><a href="#">Rada Rodziców</a></li>
 	  <li><a href="#">1%</a></li>
 	  <li class=""><a href="#">BIP</a></li>
+	  <li><a href="/kolofon.html">Kolofon</a></li>
 	</ul>
 	</div>
       </aside>
@@ -135,19 +142,18 @@ Numer przedszkola? Dwa - cztery - jeden!
     <footer>
       <div class="grid">
 	<div class="unit four-fifths grid">
-	  <div class="unit one-third" >
+	  <div class="unit one-fifth" id="adres">
 	    Przedszkole nr 241<br>
 	    ul. Księcia Trojdena 5B<br>
 	    02-109 Warszawa<br>
 	    tel. +48-22-823-41-19
 	  </div>
-	  <div class="unit one-third">
-	  </div>
-	  <div class="unit one-third">
+	  <div class="unit four-fifths">
+	    <img src="obrazy/443.gif" style="max-width: none;">
 	  </div>
 	</div>
 	<div class="unit one-fifth">
-	  <img src="obrazy/klocki.png" alt="klocki" style="position: relative; top: -100px;">
+	  <img class="pixelart" src="obrazy/klocki42.png" alt="klocki" style="position: relative; top: -84px; left: 10px;">
 	</div>
       </div>
     </footer>
