Kasztan dla Tropicieli

--- a/index.html
+++ b/index.html
@@ -33,12 +33,10 @@ TODO: sitemap https://support.google.com/webmasters/answer/156184
 	</div>
 	<nav class="unit two-thirds" id="grupy">
 	  <ul>
-	    <li><img class="pixelart" src="obrazy/krasnal.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
-	    <li><img class="pixelart" src="obrazy/mis.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
-	    <!-- <li style="width: 128px; height:128px;">Tropiciele</li> -->
-	    <li><img class="pixelart" src="obrazy/krasnal.png" alt="krasnale" style="width: 128px; height: 128px;"></li>
-	    <li><img class="pixelart" src="obrazy/sloneczko.png" alt="słoneczka"></li>
-
+	    <li><img class="pixelart" src="obrazy/krasnal.png" title="Krasnale" alt="krasnale" style="width: 128px; height: 128px;"></li>
+	    <li><img class="pixelart" src="obrazy/mis.png" title="Misie" alt="misie" style="width: 128px; height: 128px;"></li>
+	    <li><img class="pixelart" src="obrazy/kasztan.png" title="Tropiciele" alt="tropiciele" style="width: 128px; height: 128px;"></li>
+	    <li><img class="pixelart" src="obrazy/sloneczko.png" title="Słoneczka" alt="słoneczka"></li>
 	  </ul>
 	</nav>
       </div>
@@ -146,7 +144,7 @@ Numer przedszkola? Dwa - cztery - jeden!
 	    Przedszkole nr 241<br>
 	    ul. Księcia Trojdena 5B<br>
 	    02-109 Warszawa<br>
-	    tel. +48-22-823-41-19
+	    tel. <a href="tel:+48228234119">+48-22-823-41-19</a>
 	  </div>
 	  <div class="unit four-fifths">
 	    <img src="obrazy/443.gif" style="max-width: none;">
